# AFO

./: .gitignore  .prettierignore  AFO_PRD_Tauri.md  CHANGELOG.md  CLAUDE.md  Project_Log.md  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  test-tutorial-inert.sh
.github/workflows/: release.yml
afo-dev (2)/: AGENTIC_PROMPT.md  tailwind.tokens.js
afo-dev (2)/src/components/: OrganizePanel.tsx
afo-dev (2)/src/lib/: ThemeProvider.tsx
afo-dev (2)/src/styles/: theme.css
afo-dev (4)/: AGENTIC_PROMPT.md  AGENTIC_PROMPT_v2.5.42_storage.md
afo-dev(5)/: AGENTIC_PROMPT_livecapture-toast_sidebar-collapse.md  AGENTIC_PROMPT_v2.5.43_storage.md
afo-dev(5)/src/components/: StoragePanel.tsx
afo-dev(5)/src/styles/: theme.css
afo-dev/src/components/: Sidebar.tsx
docs/: AGENTS.md  CLAUDE.md  Project_Log.md  afo-design-concept.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: capture.rs  cloud_sync.rs  disks.rs  duplicates.rs  journal.rs  metadata.rs  mod.rs  organizer.rs  rule_engine.rs  scheduler.rs  watcher.rs
src/components/: Toast.tsx
src/components/CommandPalette/: CommandPalette.tsx  index.tsx
src/components/DropZone/: DropZone.tsx
src/components/DuplicatesPanel/: DuplicatesPanel.tsx  index.tsx
src/components/ui/: Button.css  (+10 more)
src/lib/: ThemeProvider.tsx  store.ts  tauri-bridge.ts
src/styles/: theme.css
src/types/: tauri-plugins.d.ts
(+38 files in other folders)
