[package]
name = "afo"
version = "2.5.32"
description = "Advanced File Organizer"
authors = ["AFO Contributors"]
edition = "2021"

[lib]
name = "afo_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rayon = "1"
blake3 = "1"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
kamadak-exif = "0.6"
lofty = "0.18"
tokio-cron-scheduler = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
